card auto spacing simple fix

--- a/src/css/space.css
+++ b/src/css/space.css
@@ -16,6 +16,31 @@
   --space-auto: var(--space-5);
 }
 
+.card
+  :is(
+    .root + .heading,
+    .root + .box,
+    .root + .spread,
+    .root + .masonry,
+    .root + .carousel,
+    .image + .root,
+    .icon + .root
+  ) {
+  --space-auto: var(--space-5);
+}
+
+.card
+  :is(
+    .root + .group,
+    .root + .row,
+    .root + .wrap,
+    .root + .button,
+    .root + .price,
+    .root + .switch
+  ) {
+  --space-auto: var(--space-5);
+}
+
 .root + .heading,
 .root + .link,
 .root + .list,
